{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 373,
  "lineage": "50ca92a9-4908-a09e-f6b8-98283c62dc00",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cap_ec2_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097bd286b3ada9910",
            "arn": "arn:aws:ec2:us-east-1:914069122187:instance/i-0a3d423cc1d2bfe5e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3d423cc1d2bfe5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cap_key_2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-094ca27df180405e1",
            "private_dns": "ip-10-0-1-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-3-89-144-51.compute-1.amazonaws.com",
            "public_ip": "3.89.144.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d9c66ed589b96c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6307d6bde426fdf",
            "tags": {
              "Name": "cap_ec2_inst"
            },
            "tags_all": {
              "Name": "cap_ec2_inst"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a77b7a110a84024"
            ]
          },
          "dependencies": [
            "aws_key_pair.cap_key_2",
            "aws_security_group.cap_sg",
            "aws_subnet.cap_subnet_pub_1a",
            "aws_vpc.cap_vpc_1",
            "data.aws_ami.cap_server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cap_igw_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914069122187:internet-gateway/igw-0873461a4ec59286d",
            "id": "igw-0873461a4ec59286d",
            "owner_id": "914069122187",
            "tags": {
              "Name": "cap_igw_1a"
            },
            "tags_all": {
              "Name": "cap_igw_1a"
            },
            "vpc_id": "vpc-03e255d9ae7a7af49"
          },
          "dependencies": [
            "aws_vpc.cap_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "cap_default_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0873461a4ec59286d",
            "id": "r-rtb-03ce6df4a6ec1293c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ce6df4a6ec1293c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cap_igw_1a",
            "aws_route_table.cap_rtb_pub",
            "aws_vpc.cap_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cap_rtb_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914069122187:route-table/rtb-03ce6df4a6ec1293c",
            "id": "rtb-03ce6df4a6ec1293c",
            "owner_id": "914069122187",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cap_rtb_pub"
            },
            "tags_all": {
              "Name": "cap_rtb_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e255d9ae7a7af49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cap_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cap_rtba_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00806e029cb64acd1",
            "route_table_id": "rtb-03ce6df4a6ec1293c",
            "subnet_id": "subnet-0b6307d6bde426fdf"
          },
          "dependencies": [
            "aws_route_table.cap_rtb_pub",
            "aws_subnet.cap_subnet_pub_1a",
            "aws_vpc.cap_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cap_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914069122187:security-group/sg-08a77b7a110a84024",
            "description": "cap security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a77b7a110a84024",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cap_sg",
            "name_prefix": "",
            "owner_id": "914069122187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cap_sg"
            },
            "tags_all": {
              "Name": "cap_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e255d9ae7a7af49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cap_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cap_subnet_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914069122187:subnet/subnet-0b6307d6bde426fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6307d6bde426fdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914069122187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cap_subnet_pub_1a"
            },
            "tags_all": {
              "Name": "cap_subnet_pub_1a"
            },
            "vpc_id": "vpc-03e255d9ae7a7af49"
          },
          "dependencies": [
            "aws_vpc.cap_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cap_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914069122187:vpc/vpc-03e255d9ae7a7af49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb449c5abb49bbd2",
            "default_route_table_id": "rtb-08100bf4f937699b7",
            "default_security_group_id": "sg-0fca39676db77821c",
            "dhcp_options_id": "dopt-051690809dff57a19",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03e255d9ae7a7af49",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08100bf4f937699b7",
            "owner_id": "914069122187",
            "tags": {
              "Name": "cap_vpc_1"
            },
            "tags_all": {
              "Name": "cap_vpc_1"
            }
          }
        }
      ]
    }
  ]
}